--- a/LocalNote/LocalNote/LocalNote.csproj
+++ b/LocalNote/LocalNote/LocalNote.csproj
@@ -98,6 +98,8 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPageData.cs" />
+    <Compile Include="NotesModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
